<resources>
    <string name="app_nameee">Projectfinal</string>
    //Headings
    <string name="heading_one">"Stay Organized and Productive</string>
    <string name="heading_two">Plan, Track, and Achieve</string>
    <string name="heading_three">Your Personal Productivity Assistant</string>
    <string name="heading_fourth">Never Miss a Deadline</string>

    //Description
    <string name="desc_one">Effortlessly manage your tasks, projects, and deadlines with our intuitive task management app. Streamline your workflow and achieve your goals.</string>
    <string name="desc_two">From planning to completion, keep track of your tasks and projects all in one place. Stay on top of your to-do list with our powerful tools.</string>
    <string name="desc_three">Customize your task management experience. Tailor the app to fit your workflow and personal preferences, making productivity a breeze.</string>
    <string name="desc_fourth">Stay ahead of your schedule with automated reminders and notifications. Our app ensures you never forget an important task.</string>
    <string name="title_activity_login">Login</string>

    <string name="june_28_2024">June 28, 2024</string>
    <string name="find_task">Find task</string>
    <string name="next_tasks">Next Tasks</string>
    <string name="calendar_screen">Calendar Screen</string>
    <string name="mark_task">Mark Task</string>
    <string name="task_title">Task Title</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="designer">Designer</string>
    <string name="app_namee">MyApp</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="profile_image">Profile Image</string>
    <string name="change_image">Change Image</string>
    <string name="account">Account</string>
    <string name="account_description">Privacy, security, changing email or number</string>
    <string name="touch">Touch</string>
    <string name="language">Language</string>
    <string name="sync_with_google">Sync with Google</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="sync">sync</string>

</resources>