<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ProfileFragment">

    <!-- Header section -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <!-- Back button -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:src="@drawable/backarrow"
            android:contentDescription="@string/back" />

        <!-- Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Profile image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/profilepic"
            android:contentDescription="@string/profile_image" />

        <!-- Change image text -->
        <TextView
            android:id="@+id/changeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileImage"
            android:layout_centerHorizontal="true"
            android:text="@string/change_image"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true" />

    </RelativeLayout>

    <!-- Settings options section -->
    <LinearLayout
        android:id="@+id/settingsOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Account option -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/iconAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/acount"
                android:contentDescription="@string/account" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iconAccount"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_description"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- Touch option -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/iconTouch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/notificationacount"
                android:contentDescription="@string/touch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_toEndOf="@id/iconTouch"
                android:text="@string/touch"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <!-- Language option -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/iconLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/websiteglobeicon"
                android:contentDescription="@string/language" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/iconLanguage"
                android:text="@string/language"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <!-- Sync with Google option -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <ImageView
                android:id="@+id/iconSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sync"
                android:src="@drawable/google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/iconSync"
                android:text="@string/sync_with_google"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
